Issue 1674: Login button text is not centered.

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -2,9 +2,9 @@
 /*form buttons (input, button, are currently styled the same as navigation and sorting buttons, in site-chrome.css)*/
 form fieldset legend, legend { height:0; width:0; font-size:0; color:#fffef9;}
 #main form fieldset.table		{ border:none;}
-form input {font-size: 1em;}
-form p.submit, input.submit { text-align:right; }
-#main form .submit input {width:auto;}
+form input { font-size: 1em;}
+form p.submit, input.submit { text-align:center;}
+#main form .submit input { width:auto;}
 form p { line-height:2; clear:both;}
 /*form dl { position:relative; }*/
 form dt { float:left; clear:left; width:12em; margin: 0; padding:0.25em 0.5625em 0.25em 0}
@@ -12,7 +12,7 @@ form dd { float: left;}
 form code { display:block;}
 p.character_counter { font-size:85.7%; color:#666; display:inline; position:relative;}
 .character_counter span { display:inline-block; width: 3.75em; text-align:right ;}
-form select {vertical-align:text-top; font-size: 1em;}
+form select { vertical-align:text-top; font-size: 1em;}
 
 /*DASHBOARD */
 .sidebar form {float:left}
